--- a/Home_work/work_for _Home.page/style.css
+++ b/Home_work/work_for _Home.page/style.css
@@ -17,7 +17,6 @@ list-style-type: none;
 a{
   text-decoration: none;
   display:inline-block ;
-  float:right ;
   margin:10px ;
   color: white;
  text-align: center;
@@ -36,7 +35,7 @@ a:active {
   
 
 }
-button{
+.btn{
   background-color  :rgba(255, 187, 0, 0.999);
   border-radius: 6px;
   border-style: none;
@@ -44,14 +43,61 @@ button{
   margin-top: 11px;
   margin-left: 120px;
 }
-button:hover{
+.btn:hover{
   scale: 1.2;
   transition:0.6s;
-  opacity: 0.6;
+  opacity: 0.7;
+  background-color: burlywood;
 } 
-button:active{
+.btn:active{
   cursor: pointer;
   scale: 1.4;
   opacity: 0.4;
   transition: 0.3s;
+}
+form{
+  width: 250px auto;
+    text-align: center;
+    margin-top:-10px;
+}
+.Log{
+  background: url(./good\ logo.png) fixed;
+  background-repeat: no-repeat;
+  text-align: center;
+  margin-top: 100px;
+  color:rgba(255, 187, 0, 0.999);
+  background-size: cover;
+  width: 100%;
+}
+.Login{
+  padding:30px;
+    width: 240px;
+    margin-top: 98px;
+    margin-left: 190px;
+    margin:0 auto ;
+  background-color: rgb(3, 3, 3);
+  
+  
+}
+input{
+  width:249px ;
+  text-align: center;
+  background: transparent;
+  border: none;
+  border-bottom:2px solid whitesmoke ;
+  font-size:18px;
+  font-weight:bolder 200px;
+  padding:10px 0 ;
+  transition: 0.5s;
+  outline: none;
+  height:35px ;
+  color: lavenderblush;
+  background-attachment: fixed;
+  width: auto;
+}
+.Signup p{
+  color: whitesmoke;
+}
+.Signup a:hover{
+  scale:1.1;
 }
