--- a/Home_work/work_for _Home.page/style.css
+++ b/Home_work/work_for _Home.page/style.css
@@ -59,6 +59,7 @@ form{
   width: 250px auto;
     text-align: center;
     margin-top:-10px;
+  
 }
 .Log{
   background: url(./good\ logo.png) fixed;
@@ -66,17 +67,21 @@ form{
   text-align: center;
   margin-top: 100px;
   color:rgba(255, 187, 0, 0.999);
-  background-size: cover;
-  width: 100%;
+  background-size: contain;
+  background-position: center;
+  background-color:#0f0e0e;
 }
 .Login{
   padding:30px;
-    width: 240px;
+    width: 200px;
     margin-top: 98px;
     margin-left: 190px;
     margin:0 auto ;
   background-color: rgb(3, 3, 3);
-  
+  background-position: center;
+  background-size: cover;
+  margin-top: 60px;
+  padding-right: 65px;
   
 }
 input{
